# stackql-agentflow

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/hello-world/: Cargo.toml  pipeline.yaml
examples/hello-world/prompts/: reviewer_agent.md  writer_agent.md
examples/hello-world/src/: main.rs
src/: lib.rs  pipeline.rs
src/agents/: context.rs  mod.rs  runner.rs  traits.rs
src/claude/: client.rs  message.rs  mod.rs
src/config/: agent.rs  mod.rs  pipeline.rs  state.rs  tool.rs
src/error/: mod.rs
src/observability/: event.rs  hub.rs  mod.rs  server.rs  sink.rs
src/orchestrator/: aggregator.rs  dispatcher.rs  mod.rs
src/retry/: governor.rs  mod.rs
src/state/: machine.rs  mod.rs  transitions.rs
src/tools/: filesystem.rs  mod.rs  traits.rs
static/: index.html
